Assessment/services/k8s/contact-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
    name: contact-depl
spec:
  replicas: 1
  selector:
    matchLabels: 
       app: contactservice
  template:
    metadata: 
       labels:
         app: contactservice
    spec:
      containers:
        - name: contactservice
          image : tayfunuyar/contactservice:latest
---
apiVersion: v1 
kind: Service 
metadata: 
    name: contact-clusterip-srv
spec: 
   type : ClusterIP
   selector:
      app: contactservice
   ports:
     - name: contactservice
       protocol: TCP 
       port: 80
       targetPort: 80
