Assessment/services/k8s/contact-np-srv.yaml
apiVersion: v1 
kind: Service
metadata:
  name: contactnpservice-srv
spec:
  type: NodePort
  selector:
    app: contactservice
  ports:
    - name: contactservice
      protocol: TCP
      port: 80
      targetPort: 80
