Assessment/services/k8s/report-np-srv.yaml
apiVersion: v1 
kind: Service
metadata:
  name: reportnpservice-srv
spec:
  type: NodePort
  selector:
    app: reportservice
  ports:
    - name: reportservice
      protocol: TCP
      port: 81
      targetPort: 81
