Assessment/services/k8s/assessment-ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: assessment-ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: acme.com
      http:
        paths: 
          - path: /
            pathType: Prefix 
            backend:
              service: 
                 name: contact-clusterip-srv
                 port:
                   number: 80
          - path: /
            pathType: Prefix 
            backend:
               service:
                 name: report-clusterip-srv
                 port:
                   number: 80
